<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TodoList Demo</string>
    <string name="add">Add</string>
    <string name="change">Change</string>
    <string name="note">note</string>
    <string name="title">Title</string>
    <string name="add_note">Add Note</string>
    <string name="back">Back</string>
    <string name="credits">Credits</string>
    <string name="notes">Notes</string>

    <string-array name="credits_list">
        <item>Add button designed by Kiranshastry from www.Flaticon.com</item>
        <item>1</item>
        <item>Delete button designed by Kiranshastry from www.Flaticon.com</item>
        <item>2</item>
        <item>Pin icon designed by Smashicons from www.Flaticon.com</item>
        <item>3</item>
        <item>App by Steven Aanetsen.</item>
        <item>4</item>
    </string-array>

    <string name="purpose_title">The Title of the note.</string>
    <string name="purpose_note_body">The main body of the note.</string>

    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="temp_text">Temp</string>
    <string name="preferences_loaded">Preferences Loaded</string>
    <string name="preferences_saved">Preferences Saved</string>
    <string name="new_app_set_up">New App Set up</string>
    <string name="write_note">Write Note</string>
    <string name="hint_password">Your Note</string>
    <string name="pin_marker">pin marker</string>
    <string name="todo">TODO</string>
    <string name="notes_not_found">Notelist not found. No Notes in list.</string>
    <string name="check_box">Check Box</string>

</resources>